--- a/views/widget2/community_nav/community_nav.html
+++ b/views/widget2/community_nav/community_nav.html
@@ -52,7 +52,7 @@ set adviserNav = [
 <div class="community-nav-con">
   {% for item in adviserNav %}
   {% if type == item.nav_name %}
-  <a href="{{helper.urlgen(id | string, item.nav_url_type)}}" class="community-nav-list nav-active">{{item.nav_name}}</a>
+  <a href="{{helper.urlgen(id | string, item.nav_url_type)}}" class="community-nav-list nav-active" style="float:left;">{{item.nav_name}}</a>
   {% else %}
   <a href="{{helper.urlgen( id | string, item.nav_url_type)}}" class="community-nav-list">{{item.nav_name}}</a>
   {% endif %}
