发布页面新增院校百科标签

--- a/views/edit_article.html
+++ b/views/edit_article.html
@@ -172,6 +172,7 @@
                   { "name":"留学方案","val":"留学方案" },
                   { "name":"难点解析","val":"难点解析" },
                   { "name":"备考资讯","val":"备考资讯" },
+                  { "name":"院校百科","val":"院校百科" },
                   { "name":"留学案例","val":"留学案例" }, 
                   {"name":"自定义标签","val":article.article_info.custom_tags}
                 ]  %}
@@ -439,7 +440,8 @@
           { "name":"背景提升","val":"背景提升" },
           { "name":"留学方案","val":"留学方案" },
           { "name":"难点解析","val":"难点解析" },
-          { "name":"备考资讯","val":"备考资讯" }
+          { "name":"备考资讯","val":"备考资讯" },
+          { "name":"院校百科","val":"院校百科" }
         ];
       $('#sureBtn').on('click',surePublish); //发布文章
       $("#save-draft").on("click",savePublish); //保存草稿箱
