--- a/views/case_detail.html
+++ b/views/case_detail.html
@@ -31,6 +31,7 @@
               {{userinfo.realname}}<i class="adviser-v-i"></i>
             </span>
           </div>
+          <div class="guide-text" style="float:left;">去主页浏览TA的更多精彩内容<span class="iconfont">&#xe677;</span><span class="iconfont">&#xe677;</span></div>
           <div style='float:right;'>
             <div class="bdsharebuttonbox page_share_buttons" style="margin-top: 15px;float: left;" data-uid='{{userinfo.uid}}'>
               <a href="#" class="bds_weixin wx" data-cmd="weixin" title="分享到微信"></a>
