加载更多回复

--- a/views/widget2/comment/comment.html
+++ b/views/widget2/comment/comment.html
@@ -358,7 +358,7 @@
 
   function ansHtml(ans_list){
     if (ans_list == null) {
-      return false;
+      return '';
     }
     //回复html
     var ahtml = '';
