--- a/views/release_article.html
+++ b/views/release_article.html
@@ -462,7 +462,7 @@
       ];
       editor.customConfig.debug = false;
       // 关闭粘贴样式的过滤
-      editor.customConfig.pasteFilterStyle = false;
+      editor.customConfig.pasteFilterStyle = true;//false;
       editor.customConfig.uploadFileName = 'upload';
       // 将图片大小限制为 500K
       editor.customConfig.uploadImgMaxSize = 2*1024 * 1024;
