发布文章页和在线评估以及活动在线预约增加中国香港和奥地利

--- a/views/edit_article.html
+++ b/views/edit_article.html
@@ -59,6 +59,7 @@
                 {"countryId":"51","txt":"日本"},
                 {"countryId":"50","txt":"韩国"},
                 {"countryId":"54","txt":"中国香港"},
+                {"countryId":"55","txt":"中国澳门"},
                 {"countryId":"100","txt":"俄罗斯"},
                 {"countryId":"101","txt":"乌克兰"},
                 {"countryId":"108","txt":"爱尔兰"},
@@ -74,7 +75,8 @@
                 {"countryId":"106","txt":"瑞典"},
                 {"countryId":"107","txt":"芬兰"},
                 {"countryId":"109","txt":"荷兰"},
-                {"countryId":"113","txt":"瑞士"}
+                {"countryId":"113","txt":"瑞士"},
+                {"countryId":"114","txt":"奥地利"}
               ] %}
               <select id="apply-country" onchange="changeForm(this.value)">
                 {% for item in countryList %}
