--- a/views/widget/online_evaluation/online_evaluation.html
+++ b/views/widget/online_evaluation/online_evaluation.html
@@ -63,6 +63,7 @@
 								<option value='52'>新加坡</option>
 								<option value='53'>马来西亚</option>
 								<option value='54'>中国香港</option>
+								<option value='55'>中国澳门</option>
 								<option value='110'>丹麦</option>
 								<option value='103'>德国</option>
 								<option value='104'>法国</option>
@@ -71,6 +72,7 @@
 								<option value='107'>芬兰</option>
 								<option value='109'>荷兰</option>
 								<option value='113'>瑞士</option>
+								<option value='114'>奥地利</option>
 							</select>
 						</div>
 						<div class="textNum"><span class="numTip" id="department-num"></span></div>
