发布文章过滤

--- a/views/release_article.html
+++ b/views/release_article.html
@@ -832,22 +832,30 @@
       function dataFilter (originData) {
         var returnData = '';
         var filterArr = [
-          {
-            reg: /<style[\S\s]+?<\/style>/g,
-            str:''
-          },
-          {
-            reg: /<img[^>]*?(src=\"[^\"]*?\")[^>]*?(style=\"[^\"]*?\")*?[^>]*?>/g,
-            str: '<img $1 $2/>'
-          },
-          {
-            reg: /<o:p[\S\s]*?>/g,
-            str: ''
-          },
-          {
-            reg: /\<section135[\S\s]+\<\/section135[\S\s]+?\\\>/g,
-            str: ''
-          }
+            {
+              reg: /<p \-[\S\s]+?<\/p>/,
+              str:''
+            },
+            {
+              reg: /<style[\S\s]+?<\/style>/g,
+              str:''
+            },
+            {
+              reg: /<img[^>]*?(src=\"[^\"]*?\")[^>]*?(style=\"[^\"]*?\")*?[^>]*?>/g,
+              str: '<img $1 $2/>'
+            },
+            {
+              reg: /<o:p[\S\s]*?>/g,
+              str: ''
+            },
+            {
+              reg: /<section[^ ].+<\/section[^ ].+?>/g,
+              str: ''
+            },
+            {
+              reg: /<spanmargin[\S\s]+<\/spanmargin[\S\s]*?>/,
+              str: ''
+            }
         ]; 
         filterArr.forEach(function(val,index) {
           originData = originData.replace(val.reg,val.str);
