--- a/views/edit_article.html
+++ b/views/edit_article.html
@@ -779,6 +779,10 @@
             {
               reg: /<spanmargin[\S\s]+<\/spanmargin[\S\s]*?>/,
               str: ''
+            },
+            {
+              reg: /<font[.*]>(.*?)<\/font>/g,
+              str: ''
             }
         ]; 
         filterArr.forEach(function(val,index) {
