--- a/views/release_article.html
+++ b/views/release_article.html
@@ -855,6 +855,10 @@
             {
               reg: /<spanmargin[\S\s]+<\/spanmargin[\S\s]*?>/,
               str: ''
+            },
+            {
+              reg: /<font[.*]>(.*?)<\/font>/g,
+              str: ''
             }
         ]; 
         filterArr.forEach(function(val,index) {
