filter 发布内容font标签

--- a/views/release_article.html
+++ b/views/release_article.html
@@ -857,7 +857,7 @@
               str: ''
             },
             {
-              reg: /<font[.*]>(.*?)<\/font>/g,
+              reg:  /<font.*?<\/font>/g,
               str: ''
             }
         ]; 
