--- a/views/edit_article.html
+++ b/views/edit_article.html
@@ -781,7 +781,7 @@
               str: ''
             },
             {
-              reg: /<font[.*]>(.*?)<\/font>/g,
+              reg:  /<font.*?<\/font>/g,
               str: ''
             }
         ]; 
