--- a/views/release_article.html
+++ b/views/release_article.html
@@ -186,8 +186,8 @@
                 {% endfor %}
                 <span class="recommend-sel" style="display: block;" data-str="留学案例" id="recommend-sel-case" >
                   <i class="level-sel-i iconfont"></i>
-                  <i>成功案例</i>
-                  <i class="numTip" style="margin-left:30px;">注：选中【成功案例】标签即发布至顾问个人主页-案例中
+                  <i>留学案例</i>
+                  <i class="numTip" style="margin-left:30px;">注：选中【留学案例】标签即发布至顾问个人主页-案例中
                   </i>
                 </span>
                 <div  style="display: block;">
