--- a/views/release_article.html
+++ b/views/release_article.html
@@ -659,13 +659,13 @@
             if(result.code == 0){
               layer.msg('发布成功')
               if(login_ss.usertype == 2){
-                // window.setTimeout(function(){
-                //     if(artType == 1){
-                //         window.location.href=fn.urlgen('case',result.data.article_id.toString());
-                //     }else {
-                //         window.location.href=fn.urlgen('article',result.data.article_id.toString());
-                //     }
-                // },1000);
+                window.setTimeout(function(){
+                    if(artType == 1){
+                        window.location.href=fn.urlgen('case',result.data.article_id.toString());
+                    }else {
+                        window.location.href=fn.urlgen('article',result.data.article_id.toString());
+                    }
+                },1000);
               }
             }else if(result.code == '1210000011'){
               layer.msg('标题已存在，请更换标题');
