--- a/views/edit_article.html
+++ b/views/edit_article.html
@@ -773,8 +773,12 @@
               str: ''
             },
             {
-              reg: /<section([\s\S]+?)>/g,
+              reg: /<section[\s\S]*?>/g,
               str: '<section>'
+            },
+            {
+              reg: /<\/section[\s\S]*?>/g,
+              str: '</section>'
             },
             {
               reg: /<spanmargin[\S\s]+<\/spanmargin[\S\s]*?>/,
