--- a/public/assets/css/article_detail.css
+++ b/public/assets/css/article_detail.css
@@ -208,7 +208,26 @@
 .adviser-case-detail-offer em{
   font-style: italic;
 }
-
+/*恢复ul ol li table的默认样式*/
+.adviser-case-detail-offer ul,.adviser-case-detail-offer ul li {
+  list-style: disc;
+}
+.adviser-case-detail-offer ol,.adviser-case-detail-offer ol li {
+  list-style: decimal;
+}
+.adviser-case-detail-offer table {
+  margin: 10px 0;
+}
+.adviser-case-detail-offer table td,.adviser-case-detail-offer table th{
+  border: 1px solid #dcdcdc;
+  padding: 5px 0;
+  color: #666;
+}
+.adviser-case-detail-offer table th {
+  background-color: #f5f5f5;
+  text-align: center;
+  color: #333;
+}
 .adviser-touxiang{
   width:50px;
   height:50px;
