修改留学攻略筛选

--- a/views/country_list.html
+++ b/views/country_list.html
@@ -162,6 +162,14 @@
       {
       "id": 113,
       "country": "瑞士"
+      },
+      {
+      "id": 55,
+      "country": "中国澳门"
+      },
+      {
+      "id": 114,
+      "country": "奥地利"
       }
       ]
       %}
