--- a/views/index.html
+++ b/views/index.html
@@ -115,7 +115,7 @@
       <a   href="#country100"><div class="guoqi_ios guoqi_ios9"></div><p>俄罗斯</p></a>
       <a   href="#country101"><div class="guoqi_ios guoqi_ios10"></div><p>乌克兰</p></a>
       <a   href="#country108"><div class="guoqi_ios guoqi_ios11"></div><p>爱尔兰</p></a>
-      <a style="margin-right: 0"  href="#country111"><div class="guoqi_ios guoqi_ios12"></div><p>意大利</p></a>
+      <a  href="#country111"><div class="guoqi_ios guoqi_ios12"></div><p>意大利</p></a>
       <a  href="#country112"><div class="guoqi_ios guoqi_ios13"></div><p>西班牙</p></a>
       <a  href="#country102"><div class="guoqi_ios guoqi_ios14"></div><p>白俄罗斯</p></a>
       <a  href="#country52"><div class="guoqi_ios guoqi_ios15"></div><p>新加坡</p></a>
@@ -127,7 +127,9 @@
       <a  href="#country106"><div class="guoqi_ios guoqi_ios21"></div><p>瑞典</p></a>
       <a  href="#country107"><div class="guoqi_ios guoqi_ios22"></div><p>芬兰</p></a>
       <a  href="#country109"><div class="guoqi_ios guoqi_ios23"></div><p>荷兰</p></a>
-      <a  style="margin-right: 0" href="#country113"><div class="guoqi_ios guoqi_ios24"></div><p>瑞士</p></a>
+      <a  href="#country113"><div class="guoqi_ios guoqi_ios24"></div><p>瑞士</p></a>
+      <a  href="#country55"><div class="guoqi_ios guoqi_ios26"></div><p>中国澳门</p></a>
+      <a  href="#country114"><div class="guoqi_ios guoqi_ios25"></div><p>奥地利</p></a>
     </div>
   </div>
 </div>
