--- a/views/center_main.html
+++ b/views/center_main.html
@@ -83,19 +83,74 @@
             top: 65%;
             left: 48%;
         }
+        .zhezhao_wenzhang {
+	        width: 100%;
+            height: 100%;
+            min-width: 1180px;
+	        background: #000000;
+	        opacity: 0.8;
+	        position: fixed;
+	        z-index: 1003;
+        }
+        .zhezhaof_wenzhang {
+            width: 400px;
+            height: 300px;
+            background: #fff;
+            opacity: 1;
+            position: absolute;
+            z-index: 1005;
+            top: 20%;
+            left: 30%;
+            text-align: center;
+            padding: 30px;
+            border-radius: 4px;
+        }
+        .wenzhangshu{
+            margin: 30px 0;
+            font-size: 20px;
+            color: #000;
+        }
+        .wenzhangshu span{
+            color: #C13232;
+        }
+        .zhezhaof_wenzhang input{
+            width: 200px;
+            height: 34px;
+            padding-left: 0;
+            padding-right: 0;
+            border-radius: inherit;
+            border: 1px solid #c13232;
+            border-radius: 4px;
+            background: #C13232;
+            color: #fff;
+            font-size: 20px;
+            margin-top: 40px;
+        }
 </style>
 </head>
-<body style="background: #f5f5f5">
+<body style="background: #f5f5f5;">
         <div class="zhezhao" id="zhezhaoy" style="display: none;">
-                <div style="width:1180px;height: 100%;margin: 0 auto;position: relative;">
-                    <div class="zhezhaof"></div>
-                    <img class="img1" src="{{helper.cdnhost}}/assets/img/zhezhao.png" alt="">
-                    <img class="img2" src="{{helper.cdnhost}}/assets/img/zhezhao1.png" alt="">
-                    <img class="img3" src="{{helper.cdnhost}}/assets/img/zhezhao2.png" alt="">
-                    <img class="img4" src="{{helper.cdnhost}}/assets/img/zhezhao3.png" alt="">
+            <div style="width:1180px;height: 100%;margin: 0 auto;position: relative;">
+                <div class="zhezhaof"></div>
+                <img class="img1" src="{{helper.cdnhost}}/assets/img/zhezhao.png" alt="">
+                <img class="img2" src="{{helper.cdnhost}}/assets/img/zhezhao1.png" alt="">
+                <img class="img3" src="{{helper.cdnhost}}/assets/img/zhezhao2.png" alt="">
+                <img class="img4" src="{{helper.cdnhost}}/assets/img/zhezhao3.png" alt="">
+            </div>
+            
+        </div>
+        <div class="zhezhao_wenzhang" id="gwzs" style="display: none;">
+            <div style="width:1180px;height: 100%;margin: 0 auto;position: relative;">
+                <div class="zhezhaof_wenzhang">
+                    <div class="wenzhangshu">发文章数：<span>9999</span></div>
+                    <div class="wenzhangshu">有效数：<span>9999</span></div>
+                    <div class="wenzhangshu">下架数：<span>9999</span></div>
+                    <input type="button" class="btn login-primary" value="确 认" id="submit_wenzhang">
                 </div>
                 
             </div>
+            
+        </div>
 {% include "widget/common_hide/common_hide.html"%}
 {% include "widget/top/top.html" %}
 {% import "widget/new_nav_first/common_nav.html" as common_nav %}
@@ -283,6 +338,26 @@
               scrollTop:$scrolltop-h
             })
         }
+        if (!cookie('gwzs')) {
+            $('#gwzs').show();
+            $('body').css('overflow','hidden');
+        }
+        $('#submit_wenzhang').click(function () {
+            cookie('gwzs', '1', {path: "/", domain: js_api_config.domain});
+            var time = new Date()
+            console.log('time', time)
+            cookie('gwzs_time', time, {path: "/", domain: js_api_config.domain, expires: 36500});
+            $('#gwzs').hide();
+            $('body').css('overflow','auto');
+            // $.ajax({
+            //     url: '/gwzs',
+            //     type:'GET',
+            //     dataType:'json',
+            //     success:function (msg) {
+            //         console.log('aaaaaa', msg)
+            //     }
+            // })
+        })
         $('#zhezhaoy').click(function () {
             cookie('yhrs', '1', {path: "/", domain: js_api_config.domain, expires: 36500});
             $(this).hide();
