--- a/views/widget/liuxue_item/liuxue_item.html
+++ b/views/widget/liuxue_item/liuxue_item.html
@@ -6,16 +6,17 @@
 	height: 38px;
 	float: left;
 	position: relative;
+	margin-right: 10px;
 }
 .lx-tabitems{float:left;margin-top:5px}
-.lx-tabitems li{position:relative;float:left;color:#666;margin-right:14px;text-align:center;font-size:14px;cursor:pointer}
+.lx-tabitems li{position:relative;float:left;color:#666;margin-right:28px;text-align:center;font-size:14px;cursor:pointer}
 .lx-tabitems li.active{color:#c13232;font-size: 14px;}
 /* .lx-tabitems li:first-child{margin-right: 25px;} */
 .lx-tabitems li.active em{position:absolute;bottom:-14px;left:0;display:block;width:100%;height:2px;background:#c13232}
-.lx-head a{ font-size: 14px;color: #c13232;float: left;margin-top: 5px;}
+.lx-head .lx-hovertarg a{ font-size: 14px;float: left;margin-top: 5px;}
 .lx-head .enter{ font-size: 14px;color: #c13232;float: right;margin-top: 5px;padding-right:20px;font-weight: bold;background-repeat:no-repeat;background-position:right center;}
 .lx-hovertarg{ float: left;font-size: 0;}
-.lx-hovertarg li{ display: inline-block; margin-right: 20px; *float: left}
+.lx-hovertarg li{ display: inline-block; margin-right: 26px; *float: left}
 .lx-hovertarg li:last-of-type {margin-right: 0;}
 .lx-hovertarg li a{font-size: 14px;color: #666;	transition: .2s ease;-webkit-transition: .2s ease;}
 .lx-hovertarg > li a:hover{color: #c13232;font-weight: bold;transform: scale(1.1);-webkit-transform: scale(1.1);}
@@ -27,11 +28,12 @@
 	text-align: center;
 }
 .slide-icon-area .slide-icon{display:inline-block;height: 20px;width: 20px;margin-top: 4px;background-size: 100%;}
-.lx-tags-tab .slide-menu{ position: absolute; width: 872px; height:88px; background: #fff;box-shadow: 1px 2px 5px rgba(61, 55, 55, 0.26);left:-4px;top:37px;z-index: 999;padding-bottom: 12px;font-size: 0;display: none;}
-.lx-tags-tab .slide-menu li{ width:56px; margin-left: 16px; margin-right: 15px;margin-top: 12px;display: inline-block;*float: left;}
+.lx-tags-tab .slide-menu{ position: absolute; width: 860px; background: #fff;box-shadow: 1px 2px 5px rgba(61, 55, 55, 0.26);left:-20px;top:37px;z-index: 999;font-size: 0;padding: 0 5px 20px;display: none;}
+.lx-tags-tab .slide-menu li{ width:56px; margin-left: 15px; margin-right: 15px;margin-top: 20px;display: inline-block;float: left;*float: left;line-height: 1;}
 .lx-tags-tab .slide-menu li a {
 	font-size: 14px;
 	color: #666;
+	margin-top: 0;
 }
 .lx-tags-tab .slide-menu li a:hover{ color: #c13232; text-decoration: underline;}
 
@@ -128,7 +130,8 @@
 	{ "type":"背景提升" },
 	{ "type":"留学方案" },
 	{ "type":"难点解析" },
-	{ "type":"备考资讯" }
+	{ "type":"备考资讯" },
+	{ "type":"院校百科" }
 	]
 %}
 <div class="lxContaniner" style="overflow:hidden" id="country{{floor.country_id}}">
@@ -146,14 +149,14 @@
 			</ul>
 			<ul class="lx-hovertarg">
 				{% for targitems in targlist%}
-					{% if loop.index <= 9 %}
+					{% if loop.index <= 7 %}
 						<li><a href="{{helper.active_urlgen('articles', 'n=' + floor.country_id, 'tag=' + targitems.type)}}" target="_blank">{{targitems.type}}</a></li>
 					{% endif %}
 				{% endfor %}
 			</ul>
-			<ul class="slide-menu">
+			<ul class="slide-menu clearfix">
 				{% for targitems in targlist %}
-					{% if loop.index > 9%}
+					{% if loop.index > 7%}
 						<li><a href="{{helper.active_urlgen('articles', 'n=' + floor.country_id, 'tag=' + targitems.type)}}" target="_blank">{{targitems.type}}</a></li>
 					{% endif %}
 				{% endfor %}
