首页标签下拉增加和该样式

--- a/views/country_list.html
+++ b/views/country_list.html
@@ -251,7 +251,8 @@
         { "type":"背景提升" },
         { "type":"留学方案" },
         { "type":"难点解析" },
-        { "type":"备考资讯" }
+        { "type":"备考资讯" },
+        { "type":"院校百科" }
       ]
       %}
       {% if type != '时讯' %}
