--- a/views/release_article.html
+++ b/views/release_article.html
@@ -254,7 +254,8 @@
   <script src="{{helper.cdnhost}}/assets/js/online_evaluation.js" ></script>
   <script src="{{helper.cdnhost}}/assets/js/slide.js"></script>
   <script src="{{helper.cdnhost}}/assets/js/nav_common.js"></script>
-  <script  src="{{helper.cdnhost}}/assets/js/wangEditor.js"></script>
+  <!-- <script  src="{{helper.cdnhost}}/assets/js/wangEditor.js"></script> -->
+  <script src="//unpkg.com/wangeditor/release/wangEditor.min.js"></script>
   <script src="{{helper.cdnhost}}/assets/js/follow.js"></script>
   <script src="{{helper.cdnhost}}/assets/js/footer.js"></script>
   <script src="{{helper.cdnhost}}/assets/js/xSlider-4.15.js" ></script>
@@ -465,8 +466,13 @@
       ];
       editor.customConfig.debug = false;
       // 关闭粘贴样式的过滤
-      editor.customConfig.pasteFilterStyle = true;//false;
+      editor.customConfig.pasteFilterStyle = true;
       editor.customConfig.pasteIgnoreImg = true;
+      // 自定义处理粘贴的文本内容
+      editor.customConfig.pasteTextHandle = function (content) {
+          // content 即粘贴过来的内容（html 或 纯文本），可进行自定义处理然后返回
+          return dataFilter(content);
+      }
 
       editor.customConfig.uploadFileName = 'upload';
       // 将图片大小限制为 500K
@@ -534,14 +540,9 @@
       function surePublish(){
         // 读取 html
         var readData = editor.txt.html();
-        // var dataText = editor.txt.text();
-        // console.log(data);
-        // console.log(dataText);
-        // return false;
-        var data = dataFilter(readData);
-        // console.log(readData);
-        console.log(readData == data);
-        // return false;
+        console.log(readData);
+        console.log('---------------==========================-------------')
+        return false;
         if($("#apply-country").val()==''){
           // 判断国家
           $("#apply-country").focus();
@@ -837,10 +838,6 @@
         var returnData = '';
         var filterArr = [
             {
-              reg: /<p \-[\S\s]+?<\/p>/,
-              str:''
-            },
-            {
               reg: /<style[\S\s]+?<\/style>/g,
               str:''
             },
@@ -851,6 +848,14 @@
             {
               reg: /<o:p[\S\s]*?>/g,
               str: ''
+            },
+            {
+              reg: /<p[\s\S]*?>/g,
+              str: '<p>'
+            },
+            {
+              reg: /<span[\s\S]*?>/g,
+              str: '<span>'
             },
             {
               reg: /<section[\s\S]*?>/g,
