--- a/views/edit_article.html
+++ b/views/edit_article.html
@@ -367,6 +367,7 @@
       var editor = new E('#editor','#editor1');
       // 自定义菜单配置
       editor.customConfig.menus = [   
+        'head',  
         'bold',  // 粗体
         'italic',  // 斜体
         'underline',  // 下划线
@@ -383,8 +384,14 @@
       ];
       editor.customConfig.debug = false;
       // 关闭粘贴样式的过滤
-      editor.customConfig.pasteFilterStyle = true;//false;
+      // 关闭粘贴样式的过滤
+      editor.customConfig.pasteFilterStyle = true;
       editor.customConfig.pasteIgnoreImg = true;
+      // 自定义处理粘贴的文本内容
+      editor.customConfig.pasteTextHandle = function (content) {
+          // content 即粘贴过来的内容（html 或 纯文本），可进行自定义处理然后返回
+          return dataFilter(content);
+      }
 
       editor.customConfig.uploadFileName = 'upload';
       // 将图片大小限制为 500K
@@ -484,14 +491,7 @@
       });
       function surePublish(){
         // 读取 html
-        // 读取 html
-        var readData = editor.txt.html();
-        // var dataText = editor.txt.text();
-        // console.log(data);
-        // console.log(dataText);
-        // return false;
-        var data = dataFilter(readData);
-        console.log(readData == data);
+        var data = editor.txt.html();
         if(newsletterType==1){
           //选择非时讯
           //判断学历
@@ -756,12 +756,9 @@
         });
       }
       function dataFilter (originData) {
+        // console.log('前',originData);
         var returnData = '';
         var filterArr = [
-            {
-              reg: /<p \-[\S\s]+?<\/p>/,
-              str:''
-            },
             {
               reg: /<style[\S\s]+?<\/style>/g,
               str:''
@@ -773,6 +770,14 @@
             {
               reg: /<o:p[\S\s]*?>/g,
               str: ''
+            },
+            {
+              reg: /<p[\s\S]*?>/g,
+              str: '<p>'
+            },
+            {
+              reg: /<span[\s\S]*?>/g,
+              str: '<span>'
             },
             {
               reg: /<section[\s\S]*?>/g,
@@ -793,9 +798,10 @@
         ]; 
         filterArr.forEach(function(val,index) {
           originData = originData.replace(val.reg,val.str);
-        })       
-        console.log('过滤后的原始数据'+originData);
+        })      
+        // console.log('---------------------------==================------------------') 
         returnData =  originData;
+        // console.log('后',returnData);
         return returnData;
       }
     })  
