解决编辑器空格 预览问题

--- a/views/release_article.html
+++ b/views/release_article.html
@@ -540,6 +540,7 @@
       function surePublish(){
         // 读取 html
         var data = editor.txt.html();
+        console.log(data)
         if($("#apply-country").val()==''){
           // 判断国家
           $("#apply-country").focus();
