--- a/public/assets/css/article_detail.css
+++ b/public/assets/css/article_detail.css
@@ -200,7 +200,7 @@
   font-size: 14px;
   line-height: 26px;
   color:#333;
-  text-indent: 2em;
+  /* text-indent: 2em; */
 }
 .adviser-case-detail-offer i{
   font-style: italic;
@@ -362,3 +362,37 @@
 .article_tuijian {width: 840px;margin: 10px 0px 30px;}
 .article_tuijian h1 {width: 840px;height: 40px;background: #f3f3f3;font-size: 18px;line-height: 40px;margin-bottom: 20px}
 .article_tuijian h1 div {width: 2px;height: 22px;float: left;background: #C13232;margin-top: 9px;margin-right: 10px}
+.nav-phone{
+  width: 170px;
+  float:right;
+  color:#666666;
+  *margin-top:-40px;
+}
+.nav-phone .phone-bg{
+  width: 36px;
+  height: 36px;
+  display: block;
+  margin-right: 10px;
+  text-align: center;
+  line-height: 36px;
+  margin-top:2px;
+  background: #c13232;
+  color:#ffffff;
+  float:left;
+
+}
+.phone-bg i{
+  font-size:22px;
+}
+.community-zixun{
+  float:left;
+  display: block;
+  height: 20px;
+  width: 124px;
+  line-height: 20px;
+  font-size:12px;
+}
+.community-tel{
+  display: block;
+  font-size:14px;
+}
