修改预览文章

--- a/views/center_article_detail.html
+++ b/views/center_article_detail.html
@@ -70,7 +70,7 @@
             <span class="art-tag-list">{{article.article_info.tag_list}}</span>
           </div>
         </div>
-        <div class="adviser-case-detail-come" >
+        <div class="adviser-case-detail-come" style="float:none;">
           <span>时间：{{article.article_info.add_time}}</span>
           <span style="float:right;margin-left:20px;">
             点赞{{article.article_info.votes}}
