修改过滤font标签保留字体

--- a/views/release_article.html
+++ b/views/release_article.html
@@ -869,8 +869,12 @@
               str: ''
             },
             {
-              reg:  /<font.*?<\/font>/g,
-              str: ''
+              reg:  /<font.*?>/g,
+              str: '<span>'
+            },
+            {
+              reg:  /<\/font>/g,
+              str: '</span>'
             }
         ]; 
         filterArr.forEach(function(val,index) {
