--- a/views/edit_article.html
+++ b/views/edit_article.html
@@ -793,8 +793,12 @@
               str: ''
             },
             {
-              reg:  /<font.*?<\/font>/g,
-              str: ''
+              reg:  /<font.*?>/g,
+              str: '<span>'
+            },
+            {
+              reg:  /<\/font>/g,
+              str: '</span>'
             }
         ]; 
         filterArr.forEach(function(val,index) {
