--- a/views/edit_article.html
+++ b/views/edit_article.html
@@ -375,7 +375,7 @@
         'strikeThrough',  // 删除线
         'foreColor',  // 文字颜色
         'backColor',  // 背景颜色
-        'link',  // 插入链接
+        // 'link',  // 插入链接
         'list',  // 列表
         'justify',  // 对齐方式
         'image',  // 插入图片
